# gst-jpcnn

./: configure.ac  osx_compile.sh  pack.sh
src/: Makefile.am  gstjpcnn.c  gstjpcnn.h
